syntax = "proto3";

option go_package = "github.com/istiak-004/common/api";

package api;

service OrderService{
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
};

message CreateOrderRequest {
    string customerId = 1;
    repeated ItemsWithQuantity items = 2;
}

message ItemsWithQuantity{
    string id = 1;
    int32 quantity = 2;
}
message Item{
    string ID = 1;
    string name = 2;
    double price = 3;
    int32 quantity = 4;
}

message CreateOrderResponse {
    string orderId = 1;
    string status = 4;
    double totalPrice = 3;
    repeated Item items = 2;
}